fix: resolve issue with Collapse component, final changes

--- a/src/assets/sass/components/_house.scss
+++ b/src/assets/sass/components/_house.scss
@@ -30,7 +30,6 @@
 }
 .third-line {
   display: flex;
-  align-items: center;
   justify-content: space-between;
   gap: 100px;
   @media screen and (max-width: 768px) {
